# sobfu

./: .clang-format  .gitignore  .gitlab-ci.yml  .lintflags  .lintignore  CMakeLists.txt  README.md  setup.sh
cmake/: Targets.cmake  Utils.cmake
include/kfusion/: exports.hpp  internal.hpp  kinfu.hpp  precomp.hpp  safe_call.hpp  types.hpp
include/kfusion/cuda/: device.hpp  device_array.hpp  device_memory.hpp  imgproc.hpp  kernel_containers.hpp  marching_cubes.hpp  projective_icp.hpp  temp_utils.hpp  texture_binder.hpp  tsdf_volume.hpp
include/sobfu/: params.hpp  precomp.hpp  reductor.hpp  scalar_fields.hpp  sob_fusion.hpp  solver.hpp  vector_fields.hpp
include/sobfu/cuda/: utils.hpp
params/: params_advent.ini  params_boxing.ini  params_hat.ini  params_ours.ini  params_snoopy.ini  params_umbrella.ini
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  demo.cpp
src/kfusion/: CMakeLists.txt  core.cpp  device_memory.cpp  imgproc.cpp  kinfu.cpp  marching_cubes.cpp  precomp.cpp  projective_icp.cpp  tsdf_volume.cpp
src/kfusion/cuda/: imgproc.cu  marching_cubes.cu  proj_icp.cu  tsdf_volume.cu
src/sobfu/: CMakeLists.txt  precomp.cpp  reductor.cpp  scalar_fields.cpp  sob_fusion.cpp  solver.cpp  vector_fields.cpp
src/sobfu/cuda/: reductor.cu  scalar_fields.cu  solver.cu  vector_fields.cu
test/: CMakeLists.txt  deformation_field_test.cpp  reductions_test.cpp  solver_test.cpp
